--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "shopify-api-node": "^3.2.1"    
+    "shopify-api-node": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
